grab DOM elements and add hidden div around img

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,10 @@ main {
     background-color: blue;
 }
 
+.hidden {
+    display: none;
+}
+
 section {
     background-color: var(--color5);
     max-width: 80%;
