--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -85,6 +85,7 @@ header img {
 
 p {
     margin: var(--gutter);
+    text-align: center;
 }
 
 footer {
