--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap'); */
+
 body {
     /* feel free to update these css variables for a quick theme */
 
@@ -11,24 +12,23 @@ body {
 
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
 
-    --color1: hsla(349, 69%, 76%, 1);
+    /* --color1: hsla(349, 69%, 76%, 1);
     --color2: hsla(207, 67%, 44%, 1);
     --color3: hsla(200, 61%, 56%, 1);
     --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1);
+    --color5: hsla(170, 28%, 95%, 1); */
 
-    /* --color1: hsla(45, 86%, 83%, 1);
+    --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
+    --color5: hsla(224, 40%, 79%, 1);
 
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0, 0, 0, 0.45);
     --gutter: 30px;
     --footer-height: 30px;
 
-    font-family: 'Hubballi', cursive;;
     background-color: var(--color2);
 }
 
@@ -90,7 +90,7 @@ p {
 
 footer {
     position: fixed;
-    width: 100%;
+    width: 99%;
     bottom: 0;
     display: flex;
     justify-content: flex-end;
